mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
  - name: mqtt-ssl
    port: 8883
    targetPort: 8883
