mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/balance-algorithm: roundrobin
    ingress.kubernetes.io/blue-green-deploy: group=blue=1,group=green=1
    ingress.kubernetes.io/blue-green-mode: pod
    ingress.kubernetes.io/ssl-redirect: "false"
  name: mosquitto-ingress
spec:
  rules:
  - host: joe.preteckt.us
#    http:
#      paths:
#      - backend:
#          serviceName: mosquitto
#          servicePort: 1883
#        path: /
